--- a/app/blog/posts/react-18.mdx
+++ b/app/blog/posts/react-18.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'React 18 新特性'
 publishedAt: '2023-06-12'
+image: '/images/react-og.png'
 summary: 'React 18 的发布带来了一系列令人振奋的新特性和变化，将前端开发推向了一个新的高度。本文将介绍 React 18 的主要特性，包括并发模式、新的渲染器以及更流畅的更新机制。让我们一起探索 React 生态系统的最新进展，以及如何利用这些新功能来构建更加强大和响应式的用户界面。'
 ---
 
